add image interface
